--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         >Web<span class="logo-span link">Studio</span></a
       >
       <nav>
-        <ul>
+        <ul class="list">
           <li>
             <a href="/agencja" class="link nav"><span>Agencja</span></a>
           </li>
@@ -38,7 +38,7 @@
     </header>
     <main>
       <div class="filter-buttons">
-        <ul>
+        <ul class="list">
           <li>
             <button class="filter-button" type="button">Wszystkie</button>
           </li>
@@ -53,7 +53,7 @@
         </ul>
       </div>
       <div>
-        <ul>
+        <ul class="list">
           <li>
             <figure>
               <img
@@ -172,7 +172,7 @@
         >Web<span class="logo-span-footer link">Studio</span></a
       >
       <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul>
+      <ul class="list">
         <li>
           <a href="mailto:info@example.com" class="link nav-footer"
             >info@example.com</a
