--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         >Web<span class="logo-span link">Studio</span></a
       >
       <nav>
-        <ul>
+        <ul class="list">
           <li>
             <a href="/agencja" class="link nav"><span>Agencja</span></a>
           </li>
@@ -42,7 +42,7 @@
         <button class="main-button" type="button">Zamów usługe</button>
       </section>
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <h3>LOREM IPSUM</h3>
             <p>
@@ -78,7 +78,7 @@
       </section>
       <section>
         <h2>Czym się zajmujemy</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="images/img1.jpg"
@@ -107,7 +107,7 @@
       </section>
       <section>
         <h2>Nasz zespół</h2>
-        <ul>
+        <ul class="list">
           <li>
             <figure>
               <img
@@ -172,7 +172,7 @@
         >Web<span class="logo-span-footer link">Studio</span></a
       >
       <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul>
+      <ul class="list">
         <li>
           <a href="mailto:info@example.com" class="link nav-footer"
             >info@example.com</a
